--- a/index.html
+++ b/index.html
@@ -30,8 +30,40 @@
              <div id="c"><a href="#"><div id="tc">No Ficcion</div></a></div>
              <div id="c"><a href="#"><div id="tc">Novelas</div></a></div>
    </section> 
-  </main>
 
+
+   <section class="obras">
+    
+   </section>
+
+
+   <section class="premios">
+    <h2 class="premios-title">Premios de GABO</h2>
+    <table cellspacing="1" cellpadding="1">
+      <tbody>
+        <tr class="tr1">
+          <td class="date">1993</td>
+          <td>Miembro honorario del Instituto Caro y Cuervo en Bogota</td>
+        </tr>
+        <tr class="tr2">
+          <td class="date">1985</td>
+          <td>Premio cuarenta años del Circulo de Periodistas de Bogota</td>
+        </tr>
+        <tr class="tr2">
+          <td class="date">1961</td>
+          <td>Premio ESSO de Novela Colombiana por la mala gora</td>
+        </tr>
+        <tr class="tr1">
+          <td class="date">1955</td>
+          <td>Primer Premio en el concurso de la Asociacion de Escritores y Artistas, por su cuento <i>Un dia despues del sabado</i></td>
+        </tr>
+      </tbody>
+    </table>
+   </section>
+  </main>
+<footer>
+  Gabo 2023 &copy;. Todos los derechos reservados.
+</footer>
   
   <script src="./js/main.js"></script>
 </body>
